--- a/index.html
+++ b/index.html
@@ -3,9 +3,162 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Homework-1</title>
 </head>
 <body>
+ 
+<header>
+
+   <div class="header-text">
+
+
+    <h1>All Thinks Are Possible If You believe</h1>
+    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+    <button class="btn-contact" >Contact us</button>
+   </div>
+
+
+</header>
+
+
+<main>
+
+<section class="about" >
+
+
+<div class="about-left">
+<img src="./image/person.png" alt="">
+
+
+</div>
+<div class="about-right">
+
+<h1>
+    My failures of previous year
+</h1>
+
+
+<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+
+<ul>
+
+<li> Contrary to popular belief, is not simply</li>
+
+<li> Contrary to popular belief.ply</li>
+
+<li> Contrary to popular , is not simply.</li>
+
+<li> Contrary to popular belief, is not simply</li>
+
+<li> Contrary to popular simply.</li>
+</ul>
+
+</div>
+
+</section>
+
+<section   >
+
+<h1 style="text-align: center;" >My Plans</h1>
+
+<div class="plans">
+
+
+<div class="Plan-item">
+
+
+    <img src="./image/icons/web.png" alt="">
+<h3  style="margin: 10px 0px;" >Web Development</h3>
+<p  style="color: #737272;" >I want to start</p>
+</div>
+<div class="Plan-item">
+
+
+    <img src="./image/icons/js.png" alt="">
+<h3  style="margin: 10px 0px;" >Javascript</h3>
+<p  style="color: #737272;" >I want to learn</p>
+</div>
+<div class="Plan-item">
+
+
+    <img src="./image/icons/smoke.png" alt="">
+<h3  style="margin: 10px 0px;" >Smoking Habit</h3>
+<p  style="color: #737272;" >I want to end</p>
+</div>
+<div class="Plan-item">
+
+
+    <img src="./image/icons/ecom.png" alt="">
+<h3  style="margin: 10px 0px;" >ecommerce</h3>
+<p  style="color: #737272;" >I want to develop</p>
+</div>
+
+</div>
+
+
+</section>
+<section>
+
+
+<div class="watch">
+
+<div class="watch-content">
+
+
     
+<div style="padding-left: 50px; padding-top: 50px; " >
+
+    
+    <h1 style="color: white;" >Awlays keep a positive mindset</h1>
+    <button class="call-btn" > Call Now </button>
+</div>
+</div>
+
+
+</div>
+
+</section>
+
+</main>
+
+
+<footer>
+
+<div class="footer-content">
+
+    <div class="footer-left">
+
+<h4>Future</h4>
+<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+<p>Email : info@gmail.com</p> 
+<p>Phone : 01500 00 00 00</p>
+<img src="./image/icons/fb.png" alt="">
+<img src="./image/icons/twitter.png" alt="">
+<img src="./image/icons/youtube.png" alt="">
+
+    </div>
+
+
+
+    <div class="footer-right">
+
+
+        <h4>Subscribe</h4>
+        <input placeholder="input your email" type="email">
+        <input  class="call-btn" type="submit" value="submit">
+    </div>
+
+
+
+</div>*
+
+
+</footer>
+
 </body>
 </html>
